[project]
name = "woertsposzibllen4me"
version = "0.0.0"

[project.optional-dependencies]
dev = ["ruff"]

[tool.basedpyright]
reportUnusedImport = false                # taken care of by ruff
reportImplicitStringConcatenation = false # Prefer ruff's implicit enforcement
reportUnusedCallResult = false            # Too advanced for me now ngl
# reportUndefinedVariable = false

[tool.pylint.main]
extension-pkg-allow-list = ["cv2", "win32gui"]
load-plugins = ["pylint.extensions.no_self_use"]
# Start of only use pylint in the src directory
ignore = ["*"]
ignore-patterns = []
ignore-paths = ["^((?!src).)*$"]
recursive = true
source-roots = ["src"]
# End of only use pylint in the src directory

[tool.pylint.messages_control]
disable = [
  # handled by other linters = HBOL
  "C0114", # missing-module-docstring (HBOL)
  "C0115", # missing-class-docstring (HBOL)
  "C0116", # missing-function-docstring (HBOL)
  "W1203", # logging-fstring-interpolation (not enough performance gain)
  "W1201", # logging-not-lazy (not enough performance gain)
  "E1101", # no-member (HBOL)
  "W1514", # unsupported-builtin-appeal (HBOL)
  # "W0718",               # broad-except (might need to re-enable this)
  "C0301",               # line-too-long (HBOL)
  "undefined-variable",  # (HBOL)
  "import-error",        # (HBOL)
  "unused-import",       # (HBOL)
  "unused-variable",     # (HBOL)
  "trailing-whitespace", # (HBOL)
  # "trailing-newlines",   # (tends to trigger in empty __init__.py files)
  "no-name-in-module", # (HBOL)
]
enable = [
  "no-self-use", # requires the no_self_use plugin, flags possibly static methods
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "G004",   # logging-f-string - We can use (if __debug__:) instead when needed. We like fstring logging ok ??
  "T201",   # print - We use print my guy.
  "COM812", # trailing-comma-missing - conflicts with formatter
  "D203",   # blank-line-before-class - conflicts with D211
  "D213",   # multi-line-summary-second-line - conflicts with D212
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
# Prefer vertical hanging indent style, like Black
# disabling the below settings as recommended by ruff to test
# force-wrap-aliases = true # Use parentheses for imports that span multiple lines
# split-on-trailing-comma = true
# not recommended by ruff, but testing without
# combine-as-imports = true
# force-sort-within-sections = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
